layout styling wip

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
-<header class="header">
-  <div class="header__secondary-navigation">
+<header class="">
+  <div class="">
     <%= render 'layouts/top_bar', taxons: taxons, taxon: taxon %>
   </div>
-  <div class="header__primary-navigation">
-    <div class="category-navigation">
+  <div class="">
+    <div class="">
       <% categories = taxonomies.first %>
 
       <nav class="categories">
