--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,21 +1,21 @@
-<div class="top-bar">
+<div class="flex justify-between items-center">
   <div class="text-3xl select-none">
     Marius Armory
   </div>
 
-  <div class="top-bar__search">
+  <div class="">
     <%= render 'shared/search/search_bar', taxons: taxons, taxon: taxon %>
   </div>
 
   <% if spree_current_user %>
-    <%= link_to I18n.t('spree.my_account'), account_path, class: 'auth-link' %>
+    <%= link_to I18n.t('spree.my_account'), account_path, class: '' %>
   <% else %>
-    <%= link_to I18n.t('spree.login'), login_path, class: 'auth-link' %>
+    <%= link_to I18n.t('spree.login'), login_path, class: '' %>
   <% end %>
 
-  <div class="cart-link" id="link-to-cart">
+  <div>
     <noscript>
-      <%= link_to t('spree.cart'), edit_cart_path %>
+      <%= link_to t('spree.cart'), edit_cart_path, class: 'block' %>
     </noscript>
   </div>
 
