--- a/app/views/layouts/storefront.html.erb
+++ b/app/views/layouts/storefront.html.erb
@@ -9,20 +9,22 @@
     <%= csrf_meta_tags %>
 
     <%= javascript_include_tag 'solidus_starter_frontend' %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
 
     <%= javascript_importmap_tags %>
 
     <%= favicon_link_tag 'favicon.ico' %>
     <%= yield :head %>
   </head>
-  <body class="bg-gray-300 dark:bg-gray-900" id="<%= @body_id || 'default' %>" data-turbo="false">
-    <%= render 'layouts/header', taxons: @taxons, taxon: @taxon %>
-    <%= flash_messages %>
-    <%= render BreadcrumbsComponent.new(@taxon) %>
-    <main>
-      <%= yield %>
-    </main>
-    <%= render 'layouts/footer' %>
+  <body class="min-h-screen bg-gray-300 dark:bg-gray-900 text-gray-700 dark:text-gray-300 font-medium dark:font-light" id="<%= @body_id || 'default' %>" data-turbo="false">
+    <div class="mx-10">
+      <%= render 'layouts/header', taxons: @taxons, taxon: @taxon %>
+      <%= flash_messages %>
+      <%= render BreadcrumbsComponent.new(@taxon) %>
+      <main>
+        <%= yield %>
+      </main>
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
