--- a/app/views/layouts/storefront.html.erb
+++ b/app/views/layouts/storefront.html.erb
@@ -8,6 +8,10 @@
     <%= canonical_tag(current_store.url) %>
     <%= csrf_meta_tags %>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
     <%= javascript_include_tag 'solidus_starter_frontend' %>
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
 
@@ -16,15 +20,13 @@
     <%= favicon_link_tag 'favicon.ico' %>
     <%= yield :head %>
   </head>
-  <body class="min-h-screen bg-gray-300 dark:bg-gray-900 text-gray-700 dark:text-gray-300 font-medium dark:font-light" id="<%= @body_id || 'default' %>" data-turbo="false">
-    <div class="mx-10">
-      <%= render 'layouts/header', taxons: @taxons, taxon: @taxon %>
-      <%= flash_messages %>
-      <%= render BreadcrumbsComponent.new(@taxon) %>
-      <main>
-        <%= yield %>
-      </main>
-      <%= render 'layouts/footer' %>
-    </div>
+  <body class="bg-gray-300 dark:bg-gray-900 text-gray-700 dark:text-gray-300 font-medium dark:font-light font-sans" id="<%= @body_id || 'default' %>" data-turbo="false">
+    <%= render 'layouts/header', taxons: @taxons, taxon: @taxon %>
+    <%= flash_messages %>
+    <%= render BreadcrumbsComponent.new(@taxon) %>
+    <main class="mx-10 min-h-screen">
+      <%= yield %>
+    </main>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
