--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center p-4">
+<div class="flex justify-between items-center p-4 bg-neutral-900">
   <div class="text-3xl select-none font-logo">
     Marius Armory
   </div>
@@ -11,9 +11,9 @@
       <%= link_to I18n.t('spree.login'), login_path, class: '' %>
     <% end %>
 
-    <%= link_to t('spree.cart'), edit_cart_path, class: 'pl-4' %>
-  </div>
+    <%= link_to t('spree.cart'), edit_cart_path, class: 'ml-4' %>
 
+  </div>
 
   <script>
     Solidus.fetch_cart('<%= j cart_link_path %>')
