added more header and footer styles

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="border-t-[0.01rem] border-gray-600">
   <p>
     <%= t 'spree.powered_by' %> <%= link_to 'Solidus', 'http://solidus.io/' %>
   </p>
