--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center p-4 bg-neutral-900">
+<div class="flex justify-between items-center p-4 border-b-[0.01rem] border-gray-600">
   <div class="text-3xl select-none font-logo">
     Marius Armory
   </div>
