added daisyui theme, product show page wip

--- a/app/views/cart_line_items/product_selection/_option_type.html.erb
+++ b/app/views/cart_line_items/product_selection/_option_type.html.erb
@@ -1,4 +1,4 @@
-<div class="modules_product-display-page_product-selection">
+<div class="">
   <div class = "optionType<%= option_type.presentation %>">
     <%= option_type.presentation %>:
 
