--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,10 +1,8 @@
 <div class="flex justify-between items-center p-4 border-b-[0.01rem] border-gray-600">
-  <div class="text-3xl select-none font-logo">
-    Marius Armory
-  </div>
+
+  <%= link_to 'Marius Armory', root_path, class: 'font-logo text-3xl select-none' %>
 
   <div>
-
     <% if spree_current_user %>
       <%= link_to I18n.t('spree.my_account'), account_path, class: '' %>
     <% else %>
@@ -12,7 +10,6 @@
     <% end %>
 
     <%= link_to t('spree.cart'), edit_cart_path, class: 'ml-4' %>
-
   </div>
 
   <script>
