--- a/app/views/products/_product_header.html.erb
+++ b/app/views/products/_product_header.html.erb
@@ -1,10 +1,10 @@
-<header class="product-header">
-  <h1 class="product-header__title" itemprop="name">
+<header class="">
+  <h1 class="text-2xl mb-4" itemprop="name">
     <%= product.name %>
   </h1>
 
   <% if product.price_for_options(current_pricing_options)&.money and !product.price.nil? %>
-    <h2 class="product-header__title" id="product-price">
+    <h2 class="text-3xl" id="product-price">
       <%= content_tag(
         :span,
         display_price(product),
