--- a/app/views/products/_product_image.html.erb
+++ b/app/views/products/_product_image.html.erb
@@ -1,4 +1,4 @@
-<picture class="product-image">
+<picture class="">
   <%= render(ImageComponent.new(
     image: product.gallery.images.first,
     size: :product,
