--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,14 @@
 <% @body_id = 'product-details' %>
 
 <% cache [I18n.locale, current_pricing_options, @product] do %>
-  <article class="product-page" itemscope itemtype="http://schema.org/Product">
-    <div class="product-page-row">
-      <div class="product-page__images">
-        <%= render 'product_image', product: @product %>
+  <article class="mt-10" itemscope itemtype="http://schema.org/Product">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div class="flex">
         <%= render 'product_thumbnails', product: @product %>
+        <%= render 'product_image', product: @product %>
       </div>
 
-      <div class="product-page__info">
+      <div class="">
         <%= render 'product_header', product: @product %>
         <%= render 'product_promotions', product: @product %>
         <%= render 'cart_line_items/form', product: @product %>
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class="product-page-row">
+    <div class="">
       <%= render 'product_info', product: @product %>
       <%= render 'product_properties', product_properties: @product_properties %>
     </div>
