product carousel wip

--- a/app/views/products/_product_taxons.html.erb
+++ b/app/views/products/_product_taxons.html.erb
@@ -1,12 +1,12 @@
 <% if !product.taxons.blank? %>
-  <section class="product-taxons">
-    <h2 class="product-taxons__title">
+  <section class="">
+    <h2 class="font-semibold">
       <%= t('spree.look_for_similar_items') %>:
     </h2>
 
-    <ul class="product-taxons__list">
+    <ul class="flex flex-wrap">
       <% product.taxons.each do |taxon| %>
-        <li>
+        <li class="btn btn-secondary btn-sm ml-2">
           <%= link_to taxon.name, taxon_seo_url(taxon) %>
         </li>
       <% end %>
