--- a/app/views/cart_line_items/_product_submit.html.erb
+++ b/app/views/cart_line_items/_product_submit.html.erb
@@ -1,16 +1,12 @@
 <div class="product-submit">
   <%= render 'cart_line_items/product_availability', product: product %>
 
-  <div class="horizontal-input-group">
-    <div class="horizontal-input-group__input">
-      <div class="text-input">
-        <%= text_field_tag :quantity, 1, type: :number, min: 1, class: 'input input-bordered' %>
-      </div>
-    </div>
+  <div class="my-10">
+    <%= text_field_tag :quantity, 1, type: :number, min: 1, class: 'input input-bordered w-full md:w-[250px]' %>
     <div class="mt-4">
       <%= button_tag(
         t('spree.add_to_cart'),
-        class: 'btn btn-lg btn-primary',
+        class: 'btn btn-lg btn-primary btn-block md:btn-wide',
         id: 'add-to-cart-button'
       ) %>
     </div>
