--- a/app/views/products/_product_info.html.erb
+++ b/app/views/products/_product_info.html.erb
@@ -1,9 +1,9 @@
 <div class="">
-  <h2 class="text-lg">
+  <h2 class="text-lg font-semibold">
     <%= t('spree.description') %>
   </h2>
 
-  <p class="whitespace-normal overflow-wrap mt-4 leading-relaxed" itemprop="description">
+  <p class="whitespace-normal overflow-wrap mt-2 leading-relaxed" itemprop="description">
     <%= product_description(product) rescue t('spree.product_has_no_description') %>
   </p>
 </div>
