--- a/app/views/products/_product_properties.html.erb
+++ b/app/views/products/_product_properties.html.erb
@@ -1,22 +1,20 @@
 <% unless product_properties.empty? %>
-  <div class="product-page__details">
-    <div class="product-properties">
-      <h2 class="product-properties__title">
-        <%= t('spree.properties')%>
-      </h2>
+  <div class="mt-6">
+    <h2 class="text-lg font-semibold">
+      <%= t('spree.properties')%>
+    </h2>
 
-      <table class="product-properties__table">
-        <tbody>
-          <% product_properties.each do |product_property| %>
-            <tr>
-              <td><%= product_property.property.presentation %></td>
-              <td><%= product_property.value %></td>
-            </tr>
-          <% end %>
+    <table class="mt-2 table">
+      <tbody class="">
+        <% product_properties.each do |product_property| %>
+          <tr class="">
+            <td class=""><%= product_property.property.presentation %></td>
+            <td class=""><%= product_property.value %></td>
+          </tr>
+        <% end %>
 
-          <% reset_cycle('properties') %>
-        </tbody>
-      </table>
-    </div>
+        <% reset_cycle('properties') %>
+      </tbody>
+    </table>
   </div>
 <% end %>
