--- a/app/views/products/_product_image_carousel.html.erb
+++ b/app/views/products/_product_image_carousel.html.erb
@@ -3,7 +3,7 @@
   <picture class="carousel-item relative w-full h-96" id="slide_<%=index%>">
     <%= render(ImageComponent.new(
       image: image,
-      size: :medium,
+      size: :product,
       itemprop: "image",
       data: { js: 'product-main-image' },
       classes: "object-cover w-full h-full"
