--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,11 @@
   <article class="mt-10" itemscope itemtype="http://schema.org/Product">
     <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
       <div class="md:col-span-8">
+        <%if @product.gallery.images.length > 1%>
         <%= render 'product_image_carousel', product: @product %>
+        <%else%>
+        <%= render 'product_image', product: @product %>
+        <%end%>
       </div>
 
       <div class="mt-4 md:mt-0 md:col-span-4">
