--- a/app/views/products/_products-grid.html.erb
+++ b/app/views/products/_products-grid.html.erb
@@ -8,7 +8,7 @@
   class_names = classes.push(base_class).join(" ")
 %>
 
-<ul class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+<ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
   <% products.each do |product| %>
     <%= render 'products/product-card', product: product %>
   <% end %>
