--- a/app/views/shared/search/_filters.html.erb
+++ b/app/views/shared/search/_filters.html.erb
@@ -1,13 +1,24 @@
 <% filters = applicable_filters_for(taxon) %>
 
 <% unless filters.empty? %>
-  <%= form_tag '', method: :get, id: 'sidebar_products_search' do %>
+  <%= form_tag '', method: :get, id: '' do %>
     <%= hidden_field_tag 'per_page', params[:per_page] %>
 
-    <% filters.each do |filter| %>
-      <%= render(FilterComponent.new(filter: filter, search_params: params[:search], checkbox_class: "checkbox checkbox-primary", label_class: "m-1 text-lg")) %>
-    <% end %>
+  <div class="collapse shadow-10 border border-base-300 bg-base-100 rounded-box" tabindex="0">
 
-    <%= button_tag t("spree.search"), class: 'btn btn-primary' %>
+    <input type="checkbox" />
+
+    <div class="collapse-title text-xl font-medium">
+    Filters
+    </div>
+
+    <div class="collapse-content">
+      <% filters.each do |filter| %>
+        <%= render(FilterComponent.new(filter: filter, search_params: params[:search], checkbox_class: "checkbox checkbox-primary", container_class: "mb-4 text-lg", label_class: "ml-2")) %>
+      <% end %>
+
+      <%= button_tag t("spree.search"), class: 'btn btn-primary btn-wide' %>
+    </div>
+  </div>
   <% end %>
 <% end %>
