--- a/app/views/taxons/show.html.erb
+++ b/app/views/taxons/show.html.erb
@@ -1,17 +1,20 @@
-<div class="products">
-  <aside>
-    <%= render 'shared/navigation/taxonomies', taxon: @taxon %>
-    <%= render 'shared/search/filters', taxon: @taxon if @taxon.children.empty? %>
-  </aside>
-  <section>
-    <h1 class="products__taxon-title"><%= @taxon.name %></h1>
+<div>
+  <h1 class="font-semibold text-2xl my-10"><%= @taxon.name %></h1>
+  <div class="md:flex">
 
-    <%= render 'products/products', products: @products, taxon: @taxon %>
+    <aside class="mb-10 md:mb-0 sm:w-[500px] sm:pr-10">
+      <%= render 'shared/navigation/taxonomies', taxon: @taxon %>
+      <%= render 'shared/search/filters', taxon: @taxon if @taxon.children.empty? %>
+    </aside>
 
-    <% unless params[:keywords].present? %>
-      <% cache [I18n.locale, @taxon] do %>
-        <%= render partial: 'products/products_by_taxon', collection: @taxon.children %>
+    <section>
+      <%= render 'products/products', products: @products, taxon: @taxon %>
+
+      <% unless params[:keywords].present? %>
+        <% cache [I18n.locale, @taxon] do %>
+          <%= render partial: 'products/products_by_taxon', collection: @taxon.children %>
+        <% end %>
       <% end %>
-    <% end %>
-  </section>
+    </section>
+  </div>
 </div>
