--- a/app/views/user_registrations/new.html.erb
+++ b/app/views/user_registrations/new.html.erb
@@ -27,4 +27,5 @@
 
     <%= I18n.t("spree.or") %> <%= link_to I18n.t("spree.login_as_existing"), login_path, class: "link" %> 
   <% end %>
+  </div>
 </article>
