--- a/app/views/user_passwords/edit.html.erb
+++ b/app/views/user_passwords/edit.html.erb
@@ -1,29 +1,27 @@
-<article class="auth-container" id="change-password">
-  <h1><%= I18n.t('spree.change_my_password') %></h1>
+<article class="flex flex-col min-h-screen sm:justify-center items-center mt-10 sm:mt-0" id="change-password">
+  <div class="card bg-base-100 border border-neutral-foucus p-4 sm:p-10 w-full lg:max-w-xl sm:max-w-md overflow-hidden">
+    <h1><%= I18n.t('spree.change_my_password') %></h1>
 
-  <%= render 'shared/error_messages', target: @spree_user %>
+    <%= render 'shared/error_messages', target: @spree_user %>
 
-  <%= form_for @spree_user, as: :spree_user, url: update_password_path, method: :put, html: { class: "auth-form" } do |f| %>
-    <div class="auth-form__input-wrapper">
-      <div class="text-input">
-        <%= f.label :password, "#{t("spree.password")}:" %>
-        <%= f.password_field :password, placeholder: "p455w0rd" %>
+    <%= form_for @spree_user, as: :spree_user, url: update_password_path, method: :put, html: { class: "auth-form" } do |f| %>
+        <div class="my-4">
+          <%= f.label :password, "#{t("spree.password")}:", class: "mb-2" %>
+          <%= f.password_field :password, placeholder: "p455w0rd", class: "input input-bordered w-full" %>
+        </div>
+
+        <div class="my-4">
+          <%= f.label :password_confirmation, "#{t("spree.confirm_password")}:", class: "mb-2" %>
+          <%= f.password_field :password_confirmation, placeholder: "p455w0rd", class: "input input-bordered w-full" %>
+        </div>
+
+      <div class="my-4">
+        <%= f.button t("spree.update"), name: :commit, class: 'btn btn-primary btn-block' %>
       </div>
-    </div>
 
-    <div class="auth-form__input-wrapper">
-      <div class="text-input">
-        <%= f.label :password_confirmation, "#{t("spree.confirm_password")}:" %>
-        <%= f.password_field :password_confirmation, placeholder: "p455w0rd" %>
-      </div>
-    </div>
+      <%= f.hidden_field :reset_password_token %>
 
-    <div class="auth-form__input-wrapper">
-      <%= f.button t("spree.update"), name: :commit, class: 'button-primary button-primary--full-width' %>
-    </div>
-
-    <%= f.hidden_field :reset_password_token %>
-
-    <%= I18n.t("spree.or") %> <%= link_to I18n.t("spree.create_a_new_account"), signup_path %>
-  <% end %>
+      <%= I18n.t("spree.or") %> <%= link_to I18n.t("spree.create_a_new_account"), signup_path, class: "link" %>
+    <% end %>
+  </div>
 </article>
