--- a/app/views/user_passwords/edit.html.erb
+++ b/app/views/user_passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <article class="flex flex-col min-h-screen sm:justify-center items-center mt-10 sm:mt-0" id="change-password">
-  <div class="card bg-base-100 border border-neutral-foucus p-4 sm:p-10 w-full lg:max-w-xl sm:max-w-md overflow-hidden">
+  <div class="card bg-base-100 border border-gray-700 p-4 sm:p-10 w-full lg:max-w-xl sm:max-w-md overflow-hidden">
     <h1><%= I18n.t('spree.change_my_password') %></h1>
 
     <%= render 'shared/error_messages', target: @spree_user %>
