--- a/app/views/products/_product-card.html.erb
+++ b/app/views/products/_product-card.html.erb
@@ -16,7 +16,7 @@
 
 <% cache cached do %>
   <li class="<%= class_names %>" itemscope itemtype="http://schema.org/Product" id=<%= product_id %>>
-    <article class="card shadow-xl border border-base-300">
+    <article class="card bg-base-100 border border-zinc-800">
         <figure>
         <%= link_to render(ImageComponent.new(image: product.gallery.images.first, size: :small, itemprop: "image")), url, itemprop: 'url' %>
         </figure>
