updated styling for header and footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer flex items-center justify-center p-20 border-t-[0.01rem] border-zinc-700 bg-base-100">
 
   <p class="">
     <%= t 'spree.powered_by' %> <%= link_to 'Solidus', 'http://solidus.io/' %>
