--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center p-4 border-b-[0.01rem] border-gray-600">
+<div class="flex justify-between items-center p-4 border-b-[0.01rem] border-zinc-700 bg-base-100">
 
   <%= link_to 'Marius Armory', root_path, class: 'font-logo text-3xl select-none' %>
 
