checkout page wip

--- a/app/views/carts/_cart_header.html.erb
+++ b/app/views/carts/_cart_header.html.erb
@@ -1,12 +1,12 @@
 <header class="cart-header">
-  <h1 class="cart-header__title">
+  <h1 class="text-xl font-semibold my-10">
     <%= t('spree.shopping_cart') %>
   </h1>
 
-  <div class="cart-header__actions">
+  <div class="">
     <%= order_form.button(
       t("spree.update"),
-      class: 'button-primary button-primary--bordered button-primary--small',
+      class: 'btn btn-primary btn-small',
       id: 'update-button'
     ) %>
   </div>
