--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -1,45 +1,47 @@
 <% variant = line_item.variant %>
 
 <%= order_form.fields_for :line_items, line_item do |item_form| %>
-  <article class="cart-item">
-    <div class="cart-item__image">
+  <article class="flex items-center justify-between my-6">
+
+    <section class="flex">
       <%= link_to(
         render(ImageComponent.new(
           image: variant.gallery.images.first || variant.product.gallery.images.first,
           size: :small
         )),
-        variant.product
+        variant.product,
+        class: 'h-32 w-32 mr-4'
       ) %>
-    </div>
 
-    <%= render(
-      'orders/item_info',
-      line_item: line_item,
-      variant: variant,
-      classes: ['cart-item__info']
-    ) %>
+      <div class="flex flex-col">
+        <%= render(
+          'orders/item_info',
+          line_item: line_item,
+          variant: variant,
+          classes: ['cart-item__info']
+        ) %>
 
-    <div class="cart-item__price-single">
-      <%= line_item.single_money.to_html %>
-    </div>
 
-    <div class="cart-item__quantity">
-      <div class="text-input">
-        <%= item_form.text_field :quantity, type: 'number', min: 0 %>
+        <div>
+        <%= item_form.text_field :quantity, type: 'number', min: 0, class: "input" %>
+
+        <%= order_form.submit(
+          'Remove',
+          class: 'link link-error',
+          id: "delete_#{dom_id(line_item)}",
+          data: { disable_with: 'Remove' }
+        ) %>
+        </div>
       </div>
-    </div>
 
-    <div class="cart-item__price">
-      <strong><%= line_item.display_amount.to_html unless line_item.quantity.nil? %></strong>
-    </div>
+    </section>
 
-    <div class="cart-item__remove">
-      <%= order_form.submit(
-        'Remove',
-        class: 'delete',
-        id: "delete_#{dom_id(line_item)}",
-        data: { disable_with: 'Remove' }
-      ) %>
-    </div>
+      <div>
+      <%= line_item.single_money.to_html %>
+      </div>
+
+    <strong><%= line_item.display_amount.to_html unless line_item.quantity.nil? %></strong>
   </article>
+
+  <div class="divider"></div>
 <% end %>
