--- a/app/views/carts/_cart_items.html.erb
+++ b/app/views/carts/_cart_items.html.erb
@@ -9,14 +9,7 @@
   )
 %>
 
-<section class="cart-items">
-  <div class="cart-items-header">
-    <h2 class="cart-items-header__title">Item</h2>
-    <h2 class="cart-items-header__title">Price</h2>
-    <h2 class="cart-items-header__title">Quantity</h2>
-    <h2 class="cart-items-header__title">Subtotal</h2>
-  </div>
-
+<section class="">
   <%= render(
     partial: 'carts/cart_item',
     collection: order.line_items,
