--- a/app/views/carts/edit.html.erb
+++ b/app/views/carts/edit.html.erb
@@ -1,6 +1,6 @@
 <% @body_id = 'cart' %>
 
-<article class="cart-page">
+<article class="card bg-base-300 p-4 md:p-10">
   <% if @order.line_items.empty? %>
     <%= render 'carts/cart_empty' %>
   <% else %>
@@ -15,7 +15,7 @@
     <div class="cart-page__other-actions">
       <%= render 'carts/cart_secondary_actions' %>
 
-      <div class="cart-page__coupon-code">
+      <div class="">
         <%= render 'orders/coupon_code' %>
       </div>
     </div>
