--- a/app/views/carts/_cart_footer.html.erb
+++ b/app/views/carts/_cart_footer.html.erb
@@ -1,16 +1,17 @@
 <% order = order_form.object %>
 
-<footer class="cart-footer">
-  <p class="cart-footer__total">
-    <%= t('spree.total') %>: <strong><%= order.display_total %></strong>
-  </p>
+<footer class="flex justify-end">
+  <div class="flex flex-col">
+    <p class="mb-4 text-2xl">
+      <%= t('spree.total') %>: <strong><%= order.display_total %></strong>
+    </p>
 
-  <div class="cart-footer__primary-action">
     <%= order_form.button(
       I18n.t('spree.checkout'),
       class: 'button-primary',
       id: 'checkout-link',
-      name: :checkout
+      name: :checkout,
+      class: "btn btn-primary btn-small"
     ) %>
   </div>
 </footer>
