--- a/app/views/carts/edit.html.erb
+++ b/app/views/carts/edit.html.erb
@@ -8,13 +8,12 @@
       <% order = order_form.object %>
       <%= render 'carts/cart_header', order_form: order_form %>
       
-      <section class="flex justify-end">
-        <h2 class=""><%= t('spree.subtotal') %></h2>
-      </section>
-
       <div class="divider"></div>
+
       <%= render 'shared/error_messages', target: order %>
       <%= render 'carts/cart_items', order_form: order_form %>
+
+      <div class="divider"></div>
 
       <%= render 'carts/cart_footer', order_form: order_form %>
     <% end %>
