got products in cart to act responsively

--- a/app/views/carts/_cart_header.html.erb
+++ b/app/views/carts/_cart_header.html.erb
@@ -6,7 +6,7 @@
   <div class="">
     <%= order_form.button(
       t("spree.update"),
-      class: 'btn btn-small',
+      class: 'btn btn-small btn-secondary',
       id: 'update-button'
     ) %>
   </div>
