--- a/app/views/orders/_coupon_code.html.erb
+++ b/app/views/orders/_coupon_code.html.erb
@@ -1,11 +1,11 @@
 <%= form_tag order_coupon_codes_path(@order), method: :post, class: "coupon-code" do %>
-  <div class="input-group ">
+  <div class="input-group mt-6 md:mt-0">
     <%= text_field_tag 'coupon_code',
       nil,
       id: 'order_coupon_code',
       placeholder: t("spree.coupon_code"),
       required: true,
-      class: 'input'
+      class: 'input max-w-[10rem] md:max-w-[15rem]'
     %>
 
   <%= button_tag(
